[gd_scene load_steps=6 format=3 uid="uid://cutt3mvunukgy"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_aa7yp"]
[ext_resource type="Theme" uid="uid://c68fwqiogebru" path="res://Resources/FONTS/button_theme.tres" id="2_hafg7"]
[ext_resource type="Script" path="res://Scripts/TextChangeForButton.gd" id="3_2qfvm"]
[ext_resource type="FontFile" uid="uid://bqu1naaxqcmxe" path="res://Resources/FONTS/PixelEmulator-xq08.ttf" id="4_w6uct"]

[sub_resource type="LabelSettings" id="LabelSettings_3x1bn"]
font = ExtResource("4_w6uct")
font_size = 40
outline_color = Color(0.129412, 0.129412, 0.129412, 1)
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.819608)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aa7yp")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -108.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0

[node name="Buttons" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Play" type="Button" parent="MarginContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_hafg7")
text = "PLAY"
script = ExtResource("3_2qfvm")

[node name="Tutorial" type="Button" parent="MarginContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_hafg7")
text = "TUTORIAL"
script = ExtResource("3_2qfvm")

[node name="Options" type="Button" parent="MarginContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_hafg7")
text = "options"
script = ExtResource("3_2qfvm")

[node name="Quit" type="Button" parent="MarginContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_hafg7")
text = "QUIT"
script = ExtResource("3_2qfvm")

[node name="Logo" type="TextureRect" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -95.0
offset_top = 13.0
offset_right = 95.0
offset_bottom = 72.0
grow_horizontal = 2

[node name="PlaceholderText" type="Label" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -95.0
offset_top = 13.0
offset_right = 95.0
offset_bottom = 72.0
grow_horizontal = 2
text = "PIXELTERO"
label_settings = SubResource("LabelSettings_3x1bn")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="button_down" from="MarginContainer/Buttons/Quit" to="." method="_on_quit_button_down"]
